添加点击事件

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                       <span class="night-diji">查看</span>
                     </li>
                   </ul>
-                  <a href="javascript:void(0);">查看更多</a>
+                  <a href="javascript:void(0);" class="night-diji">查看更多</a>
                 </div>
               </div>
               <div class="swiper-slide">
@@ -136,16 +136,16 @@
       <div class="night-tc-list">
         <ul class="clearFloat">
           <li>
-            <img src="images/night-tc1.png" alt="">
+            <img src="images/night-tc1.png" alt="" class="night-diji">
           </li>
           <li>
-            <img src="images/night-tc2.png" alt="">
+            <img src="images/night-tc2.png" alt="" class="night-diji">
           </li>
           <li>
-            <img src="images/night-tc3.png" alt="">
+            <img src="images/night-tc3.png" alt="" class="night-diji">
           </li>
           <li>
-            <img src="images/night-tc4.png" alt="">
+            <img src="images/night-tc4.png" alt="" class="night-diji">
           </li>
         </ul>
       </div>
@@ -190,83 +190,83 @@
     <!-- 特色独有增值功能 -->
     <div class="night-tsgn">
       <ul class="clearFloat">
-          <li>
+          <li class="night-diji">
             <img src="images/night-tsgn1.png" alt="">
             <span>绑定手机</span>
           </li>
-          <li>
+          <li class="night-diji">
             <img src="images/night-tsgn2.png" alt="">
             <span>企业彩铃</span>
           </li>
-          <li>
+          <li class="night-diji">
             <img src="images/night-tsgn3.png" alt="">
             <span>语音导航</span>
           </li>
-          <li>
+          <li class="night-diji">
             <img src="images/night-tsgn4.png" alt="">
             <span>绑定手机</span>
           </li>
-          <li>
+          <li class="night-diji">
             <img src="images/night-tsgn5.png" alt="">
             <span>通话录音</span>
           </li>
-          <li>
+          <li class="night-diji">
             <img src="images/night-tsgn6.png" alt="">
             <span>自服务门户</span>
           </li>
-          <li>
+          <li class="night-diji">
             <img src="images/night-tsgn7.png" alt="">
             <span>分支统计</span>
           </li>
-          <li>
+          <li class="night-diji">
             <img src="images/night-tsgn8.png" alt="">
             <span>分区转接</span>
           </li>
-          <li>
+          <li class="night-diji">
             <img src="images/night-tsgn9.png" alt="">
             <span>呼叫黑名单</span>
           </li>
-          <li>
+          <li class="night-diji">
             <img src="images/night-tsgn10.png" alt="">
             <span>分时转接</span>
           </li>
-          <li>
+          <li class="night-diji">
             <img src="images/night-tsgn11.png" alt="">
             <span>空闲接入</span>
           </li>
-          <li>
+          <li class="night-diji">
             <img src="images/night-tsgn12.png" alt="">
             <span>满意度调查</span>
           </li>
-          <li>
+          <li class="night-diji">
             <img src="images/night-tsgn13.png" alt="">
             <span>语音信箱</span>
           </li>
-          <li>
+          <li class="night-diji">
             <img src="images/night-tsgn14.png" alt="">
             <span>挂机短信</span>
           </li>
-          <li>
+          <li class="night-diji">
             <img src="images/night-tsgn15.png" alt="">
             <span>漏话短信</span>
           </li>
-          <li>
+          <li class="night-diji">
             <img src="images/night-tsgn16.png" alt="">
             <span>虚拟总机</span>
           </li>
-          <li>
+          <li class="night-diji">
             <img src="images/night-tsgn17.png" alt="">
             <span>WEB400</span>
           </li>
-          <li>
+          <li class="night-diji">
             <img src="images/night-tsgn18.png" alt="">
             <span>群发短信</span>
           </li>
-          <li>
+          <li class="night-diji">
             <img src="images/night-tsgn19.png" alt="">
             <span>来电记忆</span>
           </li>
-          <li>
+          <li class="night-diji">
             <img src="images/night-tsgn20.png" alt="">
             <span>电话会议</span>
           </li>
