--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>夜间表单</title>
+  <title>优音400电话官网</title>
   <link rel="stylesheet" href="css/style.css">
    <link rel="stylesheet" href="css/swiper.min.css">
   <script src="js/hotcss.js"></script>
@@ -17,7 +17,6 @@
 <body>
     <!-- banner -->
     <div class="night-banner">
-      <!-- <img src="images/night-banner.png" alt=""> -->
     </div>
     <!-- 精选高端靓号 -->
     <div class="night-gd">
@@ -32,19 +31,19 @@
                 <div class="certify-one certify-zero">
                   <ul>
                     <li>
-                      <span>400*-123-345</span>
+                      <span>400*-662-098</span>
                       <span class="night-diji">查看</span>
                     </li>
                     <li>
-                      <span>400*-123-345</span>
+                      <span>400*-662-198</span>
                       <span class="night-diji">查看</span>
                     </li>
                     <li>
-                      <span>400*-123-345</span>
+                      <span>400*-663-028</span>
                       <span class="night-diji">查看</span>
                     </li>
                     <li>
-                      <span>400*-123-345</span>
+                      <span>400*-663-228</span>
                       <span class="night-diji">查看</span>
                     </li>
                   </ul>
@@ -55,19 +54,19 @@
                 <div class="certify-two certify-zero">
                   <ul>
                     <li>
-                      <span>400*-123-345</span>
+                      <span>400*-116-567</span>
                       <span class="night-diji">查看</span>
                     </li>
                     <li>
-                      <span>400*-123-345</span>
+                      <span>400*-660-527</span>
                       <span class="night-diji">查看</span>
                     </li>
                     <li>
-                      <span>400*-123-345</span>
+                      <span>400*-567-829</span>
                       <span class="night-diji">查看</span>
                     </li>
                     <li>
-                      <span>400*-123-345</span>
+                      <span>400*-006-387</span>
                       <span class="night-diji">查看</span>
                     </li>
                   </ul>
@@ -78,19 +77,19 @@
                 <div class="certify-three certify-zero">
                   <ul>
                     <li>
-                      <span>400*-123-345</span>
+                      <span>400*-543-260</span>
                       <span class="night-diji">查看</span>
                     </li>
                     <li>
-                      <span>400*-123-345</span>
+                      <span>400*-283-335</span>
                       <span class="night-diji">查看</span>
                     </li>
                     <li>
-                      <span>400*-123-345</span>
+                      <span>400*-222-927</span>
                       <span class="night-diji">查看</span>
                     </li>
                     <li>
-                      <span>400*-123-345</span>
+                      <span>400*-222-679</span>
                       <span class="night-diji">查看</span>
                     </li>
                   </ul>
@@ -101,19 +100,19 @@
                 <div class="certify-four certify-zero">
                   <ul>
                     <li>
-                      <span>400*-123-345</span>
+                      <span>400*-970-514</span>
                       <span class="night-diji">查看</span>
                     </li>
                     <li>
-                      <span>400*-123-345</span>
+                      <span>400*-935-134</span>
                       <span class="night-diji">查看</span>
                     </li>
                     <li>
-                      <span>400*-123-345</span>
+                      <span>400*-945-314</span>
                       <span class="night-diji">查看</span>
                     </li>
                     <li>
-                      <span>400*-123-345</span>
+                      <span>400*-038-941</span>
                       <span class="night-diji">查看</span>
                     </li>
                   </ul>
@@ -173,11 +172,6 @@
         </label>
         <label for="" class="night-label-select-ui">
           <span>营业执照：</span>
-          <!-- <select class="" name="">
-            <option value="">已办理</option>
-            <option value="">未办理</option>
-            <option value="">办理中</option>
-          </select> -->
           <select name="drop2" class="ui-select">
         		<option value="">已办理</option>
         		<option value="1">未办理</option>
@@ -354,7 +348,7 @@
     	centeredSlides: true,
     	loop: true,autoplay:true,
     	loopedSlides: 3,
-    	autoplay: false,
+    	autoplay: true,
     	navigation: {
     		nextEl: '.swiper-button-next',
     		prevEl: '.swiper-button-prev',
